Button fixing and more spacing - Added buttons and adjusted size/font - Lower button has white outline - Continued to adjust spacing in divs

--- a/style.css
+++ b/style.css
@@ -2,19 +2,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 50px;
 
-
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
-
-/* Need to make the image sizes different in different divisions.
-img {
-    width: 150px;
-    height: 150px;
-}
-*/
 
 ul {
     /*pulled from 02 assignment - to remove dots*/
@@ -50,7 +41,7 @@ a:link {
     justify-content: center;
 }
 
-.TEST123 > div{
+.awesomebody > div {
     padding-left: 200px;
     padding-right: 200px;
 }
@@ -61,6 +52,10 @@ a:link {
     font-weight: bold;
 }
 
+.subtext {
+    font-size: 20px;
+}
+
 .infoheadertext {
     color: #1F2937;
     font-size: 36px;
@@ -68,16 +63,61 @@ a:link {
     text-align: center;
 }
 
+button {
+    border: none;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 8px;
+    background: #3882F6;
+    padding: 10px 24px;
+}
+
+.buttontwo {
+    border: 2px solid white;
+    border-radius: 8px;
+}
+
+.contentone,
+.contenttwo,
+.contentthree,
+.contentfour {
+    display: flex;
+    justify-content: space-evenly;
+    flex-basis: 500px;
+    align-items: center;
+}
+
 .contentone {
     background: #1F2937;
     color: white;
+
+    justify-content: space-evenly;
+    gap: 50px;
+
+    /*
     padding-left: 50px;
     padding-bottom: 100px;
+    */
+    /*
     display: flex;
+    justify-content: space-around;
+    flex-basis: 350px;
+    */
+}
+
+.onetextcontainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .contentone > div > img {
     height: 250px;
+}
+
+.contenttwo {
+    flex-direction: column;
 }
 
 .twopictures > div > img {
@@ -118,3 +158,4 @@ a:link {
     background: #3882F6;
     color: #F9FAF8;
 }
+
